[tool.poetry]
name = "black-poetry"
version = "21.6b6"
description = "The uncompromising code formatter."
license = "MIT"
authors = ["Łukasz Langa <lukasz@langa.pl>"]
readme = "README.md"
homepage = "https://github.com/psf/black"
documentation = "https://black.readthedocs.io/en/stable"
repository = "https://github.com/psf/black"
keywords = ["automation", "formatter", "yapf", "autopep8", "pyfmt", "gofmt", "rustfmt"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]
packages = [
  { include = "blackd", from = "src" },
  { include = "black", from = "src" },
  { include = "blib2to3", from = "src" },
  { include = "blib2to3/pgen2", from = "src" },
  { include = "black_primer", from = "src" },
]

[tool.poetry.urls]
"Changelog" = "https://github.com/psf/black/blob/main/CHANGES.md"

[tool.poetry.scripts]
black = "black:patched_main"
blackd = "blackd:patched_main"
black-primer = "black_primer.cli:main"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.pytest.ini_options]
optional-tests = [
  "no_python2: run when `python2` extra NOT installed",
  "no_blackd: run when `d` extra NOT installed",
]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.6.2"
appdirs = "*"
click = ">=7.1.2"
mypy_extensions = ">=0.4.3"
pathspec = ">=0.8.1"
regex = ">=2020.1.8"
toml = ">=0.10.1"
typed-ast = "==1.4.2"
typing_extensions = { "markers" = "python_version < '3.8'", "version" = ">=3.7.4" }
dataclasses = { "markers" = "python_version < '3.7'", "version" = ">0.6" }

# aiohttp and aiohttp-cors were demoted from main package dependencies. This version matches the setup.py


[tool.poetry.dev-dependencies]
aiohttp = ">=3.6.0"
aiohttp-cors = ">=0.4.0"
Sphinx = ">=3.1.2"
coverage = "*"
flake8 = "*"
flake8-bugbear = "*"
mypy = ">=0.812"
pre-commit = "*"
readme_renderer = "*"
MyST-Parser = ">=0.13.7"
sphinxcontrib-programoutput = ">=0.17"
sphinx-copybutton = ">=0.3.0"
setuptools = ">=39.2.0"
setuptools-scm = "*"
twine = ">=1.11.0"
wheel = ">=0.31.1"
black = { path = ".", develop = true, extras = ["d"] }

# the docutils issue should no longer be relevant because the latest versions of it publish one wheel for 2 and 3


[tool.poetry.extras]
d = ["aiohttp>=3.6.0", "aiohttp-cors>=0.4.0"]
colorama = ["colorama>=0.4.3"]
python2 = ["typed-ast>=1.4.2"]
uvloop = ["uvloop>=0.15.2"]
